--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,12 @@ dependencies:
     sdk: flutter
   json_annotation: ^2.0.0
   shared_preferences: ^0.4.2
+  dio: ^2.1.16
+  provider: ^3.1.0
+  intl: ^0.15.7
+  flukit: ^1.0.2
+  cached_network_image: ^1.1.2+1
+  toast: ^0.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -32,6 +38,7 @@ dev_dependencies:
   json_model: ^0.0.2
   build_runner: ^1.0.0
   json_serializable: ^2.0.0
+  intl_translation: ^0.17.2
 
 
 # For information on the generic Dart part of this file, see the
